# SmartOps

./: .gitignore  README.md  docker-compose.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-foundation/: 01-SUMMARY.md  01-UAT.md
.planning/phases/02-ingestion-knowledge-layer/: 02-01-ingestion-PLAN.md  02-01-ingestion-SUMMARY.md  02-02-knowledge-ui-PLAN.md  02-02-knowledge-ui-SUMMARY.md  02-03-llamaindex-PLAN.md  02-03-llamaindex-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-UAT.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-ai-classification-routing/: 03-01-triage-service-PLAN.md  03-01-triage-service-SUMMARY.md  03-02-background-tasks-PLAN.md  03-02-background-tasks-SUMMARY.md  03-03-triage-ui-PLAN.md  03-03-triage-ui-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-UAT.md  03-VALIDATION.md
.planning/phases/05-analytics-deployment/: 05-CONTEXT.md  (+10 more)
backend/: Dockerfile  pyproject.toml  test_triage_cli.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: analytics.py  knowledge.py  tickets.py
backend/app/core/: config.py  db.py  llm.py  otel.py  security.py
backend/app/models/: ticket.py  user.py
backend/app/services/: drafting.py  knowledge.py  triage.py
backend/scripts/: init_test_db.py
backend/tests/: conftest.py  test_analytics.py  test_knowledge.py  test_tickets.py  test_triage.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: auth.ts
(+17 files in other folders)
